implement jobs.update

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer components {
+  .alert-success {
+    @apply bg-emerald-100 border-emerald-500 text-emerald-700;
+  }
+  .alert-success svg {
+    @apply text-emerald-500;
+  }
   .alert-info {
     @apply bg-sky-100 border-sky-500 text-sky-700;
   }
